{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 56,
  "lineage": "5b830604-69ad-e516-538c-cab08c375a82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c94f07cf9a56012a",
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:elastic-ip/eipalloc-0c94f07cf9a56012a",
            "association_id": "eipassoc-0c35d4140a7a69683",
            "domain": "vpc",
            "id": "eipalloc-0c94f07cf9a56012a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0bcdc00f6f4b34850",
            "private_dns": "ip-10-0-1-238.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-52-78-204-216.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.204.216",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:internet-gateway/igw-07aba2fe2f0132178",
            "id": "igw-07aba2fe2f0132178",
            "owner_id": "739275463099",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c94f07cf9a56012a",
            "association_id": "eipassoc-0c35d4140a7a69683",
            "connectivity_type": "public",
            "id": "nat-0a6d285a88feeb6ac",
            "network_interface_id": "eni-0bcdc00f6f4b34850",
            "private_ip": "10.0.1.238",
            "public_ip": "52.78.204.216",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ceead5371dfd7ac0",
            "tags": {
              "Name": "eks-nat"
            },
            "tags_all": {
              "Name": "eks-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:route-table/rtb-05dfa35e1c070debb",
            "id": "rtb-05dfa35e1c070debb",
            "owner_id": "739275463099",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6d285a88feeb6ac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-rt"
            },
            "tags_all": {
              "Name": "eks-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:route-table/rtb-04176c05fae0dbf15",
            "id": "rtb-04176c05fae0dbf15",
            "owner_id": "739275463099",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07aba2fe2f0132178",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-rt"
            },
            "tags_all": {
              "Name": "eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0576ae15d3919f494",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05dfa35e1c070debb",
            "subnet_id": "subnet-012e15254d547d2a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499057bba6087cae",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05dfa35e1c070debb",
            "subnet_id": "subnet-0b815be7da96a56a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6cc0f24027fa66f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04176c05fae0dbf15",
            "subnet_id": "subnet-0ceead5371dfd7ac0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226f3a419c2b81e4",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-04176c05fae0dbf15",
            "subnet_id": "subnet-0ebc4d36101264f54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "112.187.234.174/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2166272027",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-01f0768a1d2529a9d",
            "security_group_rule_id": "sgr-03ba1f846e9350a6c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:subnet/subnet-012e15254d547d2a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012e15254d547d2a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275463099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-private-subnet-0"
            },
            "tags_all": {
              "Name": "eks-private-subnet-0"
            },
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:subnet/subnet-0b815be7da96a56a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b815be7da96a56a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275463099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1"
            },
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:subnet/subnet-0ceead5371dfd7ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceead5371dfd7ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275463099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-public-subnet-0"
            },
            "tags_all": {
              "Name": "eks-public-subnet-0"
            },
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:subnet/subnet-0ebc4d36101264f54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebc4d36101264f54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275463099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-public-subnet-1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1"
            },
            "vpc_id": "vpc-0297cc861b1db11d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739275463099:vpc/vpc-0297cc861b1db11d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061a9f3ab05623782",
            "default_route_table_id": "rtb-023328455eec63ca9",
            "default_security_group_id": "sg-00db3698a3eee573e",
            "dhcp_options_id": "dopt-0fef735ecd94918dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0297cc861b1db11d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023328455eec63ca9",
            "owner_id": "739275463099",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}